* FEATURE: Added support for aggregation and extending PDU version 2.
Version 3.10

2016-10-18 release(3.10.1839)
* IMPROVEMENT: Refactored signature verification step attribute handling.
* IMPROVEMENT: Implemented KSI_BlockSigner getter for the hash value of the last leaf in the tree.
* BUGFIX: Fixed debian build.
* BUGFIX: Reference counting issues fixed.
* IMPROVEMENT: Removed support for Windows build combination DLL=dll and RTL=MT(d).
* IMPROVEMENT: List macros check for NULL pointers.
* BUGFIX: Error message for unknown OID properly reported.
* BUGFIX: Userinfo in URLs with unknown schema, incl. http://, is retained for http basic authentication and is not used for KSI authentication.
* IMPROVEMENT: Moved signature helper functions from signature.{h,c} into signature_helper.{h,c}
* FEATURE: Added signature builder.
* IMPROVEMENT: All functions except *List_new and *List_free are now type safe macros.
* IMPROVEMENT: Deprecated functions KSI_TLV_setUintValue, KSI_TLV_fromUint and KSI_TLV_removeNestedTlv.

Version 3.9

2016-06-21 release(3.9.1701)
* IMPROVEMENT: Added block signature sample application.
* IMPROVEMENT: Removed dead code from http_parser.{c,h}
* IMPROVEMENT: Added KSI_verifyDataHash.
* IMPROVEMENT: Custom meta-data sepparated from the low-level implementation. Adds padding automatically.
* IMPROVEMENT: Metadata hardening verification.
* IMPROVEMENT: Removed SHA-224 support.
* IMPROVEMENT: Removed Unused function KSI_RDR_verifyEnd.
* IMPROVEMENT: PKI truststore initialization is performed on the need basis.
* IMPROVEMENT: Added signature verification according to policies.
* IMPROVEMENT: Created KSI_HmacHasher interface for incremental HMAC computation.
* IMPROVEMENT: Certificate constraints can be set and verified per publications file.
* IMPROVEMENT: Add preprocessor parseable version no.
* IMPROVEMENT: KSI_receivePublicationsFile must not verify publications file automatically.