@@ -1,3 +1,4 @@
+* IMPROVEMENT: Removed deprecated functions: KSI_TLV_setUintValue, KSI_TLV_fromUint, KSI_TLV_removeNestedTlv
 * FEATURE: Added support for aggregation and extending PDU version 2.
 Version 3.10
 
